--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,8 @@
     "module": "commonjs"
   },
   "exclude": [
-    "node_modules"
+    "node_modules",
+    ".serverless",
   ],
   "types": [
     "node",
