--- a/package.json
+++ b/package.json
@@ -11,11 +11,17 @@
   "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.72",
+    "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.31",
     "@typescript-eslint/eslint-plugin": "^4.16.1",
     "@typescript-eslint/parser": "^4.16.1",
     "aws-sdk": "^2.857.0",
     "eslint": "^7.21.0",
     "typescript": "^4.2.2"
+  },
+  "dependencies": {
+    "axios": "^0.21.1",
+    "html-to-text": "^7.0.0",
+    "lodash": "^4.17.21"
   }
 }
