--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,8 @@
     "target": "es6",
     "module": "commonjs",
     "esModuleInterop": true,
+    "rootDir": "src",
+    "outDir": "dist"
   },
   "exclude": [
     "node_modules",
