--- a/package.json
+++ b/package.json
@@ -5,10 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "npx eslint . --ext .ts,.tsx"
+    "lint": "npx eslint . --ext .ts,.tsx",
+    "build": "tsc"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
     "@types/aws-lambda": "^8.10.72",
     "@types/lodash": "^4.14.168",
